[gd_scene load_steps=17 format=3 uid="uid://cfr6oq85ofmbc"]

[ext_resource type="Script" path="res://Scenes/Player/Scripts/PauseMenu.gd" id="1_6w1dj"]
[ext_resource type="Texture2D" uid="uid://blyd44uyum4nu" path="res://Scenes/Player/HudResources/MenuSettingHolder.png" id="2_d4nov"]
[ext_resource type="Texture2D" uid="uid://c7n2xf1bf867w" path="res://Scenes/Player/HudResources/PauseMenu.tres" id="2_t3r5k"]
[ext_resource type="Texture2D" uid="uid://c1cr1wwtm2scw" path="res://Scenes/Player/HudResources/ContinueBTN.png" id="3_7kwjd"]
[ext_resource type="Texture2D" uid="uid://6j5fvu42uavu" path="res://Scenes/Player/HudResources/ContinueBTNClicked.png" id="4_xucvx"]
[ext_resource type="Texture2D" uid="uid://bb4q8bn8d7ppi" path="res://Scenes/Player/HudResources/ContinueBTNHover.png" id="5_h4gm8"]
[ext_resource type="Texture2D" uid="uid://dto4kuqhu46ss" path="res://Scenes/Player/HudResources/OptionsBtn.png" id="6_r210s"]
[ext_resource type="Texture2D" uid="uid://c6a176fjwmjcp" path="res://Scenes/Player/HudResources/OptionsBtnClicked.png" id="7_5uytm"]
[ext_resource type="Texture2D" uid="uid://bxbx3fi2p6a6i" path="res://Scenes/Player/HudResources/OptionsBtnHover.png" id="8_7bfd7"]
[ext_resource type="Texture2D" uid="uid://bh51haa5418jw" path="res://Scenes/Player/HudResources/RestartBtn.png" id="9_7mqma"]
[ext_resource type="Texture2D" uid="uid://3k2ch2d6lsmi" path="res://Scenes/Player/HudResources/RestartBtnClicked.png" id="10_vwj2d"]
[ext_resource type="Texture2D" uid="uid://4g25sb30vdti" path="res://Scenes/Player/HudResources/RestartBtnHover.png" id="11_nu2yy"]
[ext_resource type="Texture2D" uid="uid://c10ya3udnyymu" path="res://Scenes/Player/HudResources/QuitBTN.png" id="12_lqsvm"]
[ext_resource type="Texture2D" uid="uid://pvwybimwbpe2" path="res://Scenes/Player/HudResources/QuitBTNClicked.png" id="13_moetx"]
[ext_resource type="Texture2D" uid="uid://cp5d3jxdqfebf" path="res://Scenes/Player/HudResources/QuitBTNHover.png" id="14_dyk12"]
[ext_resource type="AudioStream" uid="uid://dggqahmieeqhu" path="res://Sounds/Menu/MI_SFX 32.wav" id="15_ldeoe"]

[node name="Control" type="CanvasLayer"]
script = ExtResource("1_6w1dj")

[node name="TextureRect" type="TextureRect" parent="."]
offset_top = -1.0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_t3r5k")

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 318.0
offset_top = 113.0
offset_right = 822.0
offset_bottom = 523.0
texture = ExtResource("2_d4nov")
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 463.0
offset_top = 177.0
offset_right = 573.0
offset_bottom = 309.0
scale = Vector2(2, 2)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Continue" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_7kwjd")
texture_pressed = ExtResource("4_xucvx")
texture_hover = ExtResource("5_h4gm8")

[node name="Options" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_r210s")
texture_pressed = ExtResource("7_5uytm")
texture_hover = ExtResource("8_7bfd7")

[node name="Restart" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("9_7mqma")
texture_pressed = ExtResource("10_vwj2d")
texture_hover = ExtResource("11_nu2yy")

[node name="Quit" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("12_lqsvm")
texture_pressed = ExtResource("13_moetx")
texture_hover = ExtResource("14_dyk12")

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_ldeoe")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
